--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
@@ -88,7 +88,7 @@ table tr:nth-child(even) td{
   border-bottom: 1px solid $colour-light-grey;
   overflow: auto;
 
-  .mat-table {
+  .mat-mdc-table {
     width: 100%;
     display: table;
 
@@ -225,7 +225,7 @@ table tr:nth-child(even) td{
     }
 
 
-    select.mat-input-element {
+    select.mat-mdc-input-element {
       background-color: $colour-white;
       width: 60px;
       border: 1px solid $colour-light-grey;
@@ -326,15 +326,16 @@ table tr:nth-child(even) td{
         flex-basis: auto;
       }
 
-      ::ng-deep .mat-radio-group{
+      ::ng-deep .mat-mdc-radio-group{
         display: flex;
-        .mat-radio-button{
+        .mat-mdc-radio-button{
           height: 35px;
           display: flex;
 
           &:not(:first-of-type) {
             margin-left: 5px;
           }
+          /*TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
           .mat-radio-outer-circle {
             background-color: $colour-white;
           }
@@ -352,7 +353,7 @@ table tr:nth-child(even) td{
       margin: 6px;
     }
 
-    &>select.mat-input-element { //fix for firefox flex basis issue https://github.com/philipwalton/flexbugs/issues/41
+    &>select.mat-mdc-input-element { //fix for firefox flex basis issue https://github.com/philipwalton/flexbugs/issues/41
       max-width: 150px;
     }
 
@@ -366,7 +367,7 @@ table tr:nth-child(even) td{
     font-family: $font-family-main;
   }
 
-  select.mat-input-element {
+  select.mat-mdc-input-element {
     background-color: $colour-white;
     height: 37.5px;
     top: 0;
@@ -425,7 +426,7 @@ table tr:nth-child(even) td{
 
   textarea,
   input,
-  mat-checkbox.mat-checkbox,
+  mat-checkbox.mat-mdc-checkbox,
   select {
     border: 1px solid $colour-light-grey;
     padding: 0 5px;
@@ -448,16 +449,16 @@ table tr:nth-child(even) td{
     background-color: $opacity-light-grey !important;
   }
 
-  ::ng-deep mat-checkbox .mat-checkbox-frame {
+  ::ng-deep mat-checkbox .mat-mdc-checkbox-frame {
     background-color: $colour-white;
     border: 1px solid $colour-light-grey;
     border-radius: $wf1-border-radius;
   }
 }
 
-.mat-table {
+.mat-mdc-table {
 
-  .mat-header-cell {
+  .mat-mdc-header-cell {
     color: $colour-black;
     font-weight: $font-weight-emphasis;
     font-size: $font-size;
@@ -465,7 +466,7 @@ table tr:nth-child(even) td{
 
   }
 
-  .mat-cell {
+  .mat-mdc-cell {
     color: $colour-black;
     font-weight: $font-weight;
     font-size: $font-size;
@@ -488,15 +489,15 @@ table tr:nth-child(even) td{
     }
   }
 
-  .mat-row:nth-child(even) {
+  .mat-mdc-row:nth-child(even) {
     background-color: $colour-table-background-even;
   }
 
-  .mat-row:nth-child(odd) {
+  .mat-mdc-row:nth-child(odd) {
     background-color: $colour-table-background-odd;
   }
 
-  .mat-row{
+  .mat-mdc-row{
     &:hover{
       background-color: $colour-table-background-hover;
     }
