--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
@@ -161,7 +161,7 @@
     }
 }
 
-::ng-deep .mat-tooltip  {
+::ng-deep .mat-mdc-tooltip  {
     white-space: pre-line !important;
     background-color:#6e6e6e !important;
     color: #fdfdfd !important;
