--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
@@ -1,6 +1,6 @@
 <ng-container [formGroup]="contactForm">
     <div class="dialog-container contact-widget-dialog-container">
-        <h1 mat-dialog-title>Contact Information <mat-icon [color]="closeColor"
+        <h1 mat-mdc-dialog-title>Contact Information <mat-icon [color]="closeColor"
           (mouseover)="closeColor = 'warn'"
           (mouseout)="closeColor = null" [mat-dialog-close]="false" style="cursor: pointer;">close</mat-icon></h1>
         <div class="dialog-content" mat-dialog-content>
