--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.scss
@@ -6,7 +6,7 @@
 
 .contact-widget-dialog-container {
     
-    .mat-dialog-title{
+    .mat-mdc-dialog-title{
         margin-bottom: 0;
         display: flex;
         justify-content: space-between;
