--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <mat-tab-group [(selectedIndex)]="tabIndex">
+    <mat-tab-group mat-stretch-tabs="false" [(selectedIndex)]="tabIndex">
       <mat-tab label="Active Fires">
       </mat-tab>
       <mat-tab label="Fires This Year">
