--- a/client/wfnews-war/src/main/angular/src/styles/component/_search-bar.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/component/_search-bar.scss
@@ -34,17 +34,19 @@
 
   &__input {
     flex-grow: 1;
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+    /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
     div.mat-form-field-wrapper {
       padding-bottom: 0;
-
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
       div.mat-form-field-underline {
         bottom: .25rem;
       }
-
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
       div.mat-form-field-infix {
         border-top-width: .5rem;
       }
-
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
       span.mat-form-field-label-wrapper {
         font-size: small;
         top: -.35rem;
