--- a/client/wfnews-war/src/main/angular/src/app/app.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.scss
@@ -73,7 +73,7 @@
 }
 
 // toolip style customization
-::ng-deep .mat-tooltip {
+::ng-deep .mat-mdc-tooltip {
   color: #000023 !important;
   background-color: #F8F8F8;
   -moz-box-shadow: 2px 2px 11px #666;
@@ -118,7 +118,7 @@
     .location-buttons {
       display: flex;
 
-      button.mat-button {
+      button.mat-mdc-button {
         flex: 0 0 2rem;
         min-width: 2rem;
         width: 2rem;
@@ -145,16 +145,16 @@
       left: 1rem;
       font-size: x-small;
     }
-
-    mat-radio-group,
+    /* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
+    mat-mdc-radio-group,
     .checkbox-group {
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start;
       padding-bottom: .5rem;
 
-      mat-radio-button,
-      mat-checkbox {
+      mat-mdc-radio-button,
+      mat-mdc-checkbox {
         box-sizing: border-box;
         padding-top: 1rem;
         padding-right: 1rem;
@@ -218,7 +218,7 @@
   display: flex;
   align-items: flex-end;
 
-  .mat-title {
+  .mat-headline-6 {
       font-size: 1.4rem;
       color: white;
       white-space: nowrap;
