--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -98,8 +98,8 @@
 .news-panel {
 	box-sizing: border-box;
 	max-height: $wf1-app-main-panel-tab-panel-height;
-
-    mat-card {
+    /* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
+    mat-mdc-card {
     	margin-bottom: .5rem;
     }
 }
@@ -108,6 +108,7 @@
   width: 100%;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
 ::ng-deep .cdk-overlay-container .cdk-overlay-pane .fire-size-select-content,mat-select-panel-done-animating{
 	min-height: 20rem !important
 }
@@ -183,7 +184,7 @@
 			.location-buttons {
 				display: flex;
 
-				button.mat-button {
+				button.mat-mdc-button {
 					flex: 0 0 2rem;
 					min-width: 2rem;
 					width: 2rem;
@@ -210,7 +211,7 @@
 				left: 1rem;
 				font-size: x-small;
 			}
-
+			/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
 			mat-radio-group,
 			.checkbox-group {
 				display: flex;
@@ -274,6 +275,7 @@
 	}
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card h3 {
     display: flex;
     align-items: center;
@@ -300,6 +302,7 @@ mat-card h3 {
 	box-shadow: none !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
 ::ng-deep .mat-tab-body-wrapper{
 	background-color: white !important;
 	padding-left: 1rem;
@@ -307,7 +310,7 @@ mat-card h3 {
 	padding-bottom: 5rem;
 }
 
-.mat-tab-group{
+.mat-mdc-tab-group{
 	background-color: white !important;
 }
 
