--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
-  <mat-card class="info-card news-form-card">
+  <mat-card appearance="outlined" class="info-card news-form-card">
     <div *ngIf="areaRestrictions === null || areaRestrictions.length === 0">
       There are no current Area Restrictions
     </div>
@@ -7,13 +7,13 @@
       <legend>Area Restriction Fields</legend>
       <div class="news-form">
         <div class="field size-third">
-          <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+          <mat-form-field class="item-full-width" floatLabel="always">
             <mat-label class="label required">Area Restriction Name</mat-label>
             <input matInput class="disabled-input" type="text" [value]="item.name" disabled>
           </mat-form-field>
         </div>
         <div class="field size-two-thirds">
-          <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+          <mat-form-field class="item-full-width" floatLabel="always">
             <mat-label class="label">Information Bulletin URL</mat-label>
             <input matInput class="disabled-input" type="text" [value]="item.bulletinUrl" disabled>
           </mat-form-field>
