--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-  <h1 mat-dialog-title>Publish incident</h1>
+  <h1 mat-mdc-dialog-title>Publish incident</h1>
   <div class="dialog-content publish-dialog-content" mat-dialog-content>
     Are you sure you want to publish?
   </div>
