--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/edit-video-dialog/edit-video-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/edit-video-dialog/edit-video-dialog.component.html
@@ -1,13 +1,13 @@
 <div class="dialog-container">
-    <h1 mat-dialog-title>Edit Video Details</h1>
+    <h1 mat-mdc-dialog-title>Edit Video Details</h1>
     <div class="dialog-content" mat-dialog-content>
-      <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+      <mat-form-field class="item-full-width" floatLabel="always">
         <mat-label class="label">Video Title (150 character limit)</mat-label>
         <input matInput type="text" placeholder="Title" [(ngModel)]="data.video.externalUriDisplayLabel" [value]="data.video.externalUriDisplayLabel" required>
       </mat-form-field>
     </div>
     <div class="dialog-content" mat-dialog-content>
-      <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+      <mat-form-field class="item-full-width" floatLabel="always">
         <mat-label class="label">Video URL</mat-label>
         <input matInput #input maxlength="150" type="text" placeholder="Title" [(ngModel)]="data.video.externalUri" [value]="data.video.externalUri" required>
         <mat-hint align="end">{{input.value?.length || 0}}/150</mat-hint>
