--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
@@ -41,7 +41,8 @@ select{
     font-size: 15px;
 }
 
-:host ::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+/* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version. */
+:host ::ng-deep .mat-mdc-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
     background-color: #1a5a96 ;
 }
 
