--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-align-tabs="center" [(selectedIndex)]="tabIndex" (selectedTabChange)="onTabChanged($event);">
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" [(selectedIndex)]="tabIndex" (selectedTabChange)="onTabChanged($event);">
         <mat-tab label="Legend">
             <div class="panel-header">Wildfire Stages of Control</div>
 
