--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -1,7 +1,10 @@
+
+/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
 mat-tab-group {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
 :host ::ng-deep .mat-tab-label {
   color: #003366 !important;
   font-weight: 400;
@@ -12,6 +15,7 @@ mat-tab-group {
   background-color: #003366 !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
 :host ::ng-deep .mat-tab-label-active {
     font-weight: 700 !important
 }
@@ -21,15 +25,17 @@ mat-tab-group {
 
     padding-top: 1rem;
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
-    .mat-tab-group {
+    .mat-mdc-tab-group {
       font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
     }
+    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
     .mat-tab-labels{
         padding-bottom: 1rem;
     }
-    .mat-tab-header{
+    .mat-mdc-tab-header{
      border-bottom: none;
     }
+    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
     .mat-tab-label.mat-tab-label-active {
         border-radius: 40px;
         background-color:#1a5a96;
@@ -37,6 +43,7 @@ mat-tab-group {
         opacity: 1;
         font-weight: 700;
     }
+    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
     .mat-tab-label{
         opacity: 1;
         color: #1a5a96;
@@ -50,6 +57,7 @@ mat-tab-group {
     .mat-ink-bar{
         background-color: white !important
     }
+    /* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
     .mat-tab-body-content{
         overflow: hidden
     }
@@ -64,13 +72,13 @@ mat-tab-group {
 .wildfire-checkboxs{
     font-size: 15px;
     padding: 1rem;
-    .mat-checkbox {
+    .mat-mdc-checkbox {
         margin-right: 1rem;
     }
     border-bottom: 1px solid #dddddd;
 }
 
-.mat-raised-button {
+.mat-mdc-raised-button {
     box-shadow: none;
 }
 
@@ -337,20 +345,23 @@ section {
     text-decoration: underline;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
 ::ng-deep .mat-progress-bar-fill {
   background-color: white;
 }
 
 
+/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
 ::ng-deep .mat-progress-bar-fill::after {
   background-color: #1a5a9684;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
 ::ng-deep .mat-progress-bar-buffer {
   background: white;
 }
 
-::ng-deep .mat-progress-bar {
+::ng-deep .mat-mdc-progress-bar {
   border-radius: 2px;
   height: 2px !important;
   margin-left: -16px;
