--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -207,7 +207,7 @@
   z-index:9999;
 }
 
-:host ::ng-deep .mat-tab-header {
+:host ::ng-deep .mat-mdc-tab-header {
   top: -1px;
   z-index: 1000;
   position: sticky;
