--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -117,15 +117,17 @@
   }
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
 ::ng-deep .mat-progress-bar-fill::after {
   background-color: #1a5a9684;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
 ::ng-deep .mat-progress-bar-buffer {
   background: white;
 }
 
-::ng-deep .mat-progress-bar {
+::ng-deep .mat-mdc-progress-bar {
   border-radius: 2px;
   height: 2px !important;
 }
