--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -2,7 +2,8 @@
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
-:host ::ng-deep .mat-tab-label {
+/*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
+:host ::ng-deep .mdc-tab__text-label {
   color: #003366 !important;
   font-weight: 400;
   font-size: 1rem;
@@ -50,6 +51,7 @@
 }*/
 /* Keeping in case we want the button style again */
 
+/*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
 mat-tab-group {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
 }
@@ -208,6 +210,7 @@ mat-tab-group {
   background-color: #003366 !important;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
 :host ::ng-deep .mat-tab-label-active {
   font-weight: 700 !important
 }
