--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -14,7 +14,7 @@ body {
     align-items: center;
 }
 
-button.mat-raised-button.mat-primary {
+button.mat-mdc-raised-button.mat-primary {
   background-color: $colour-button-primary;
   color: $colour-white;
 
@@ -54,7 +54,7 @@ mat-toolbar.wf1-application-header.mat-primary {
         justify-content: center;
         align-items: flex-end;
 
-        .mat-title {
+        .mat-headline-6 {
             font-size: 1.4rem;
             color: $colour-white;
             white-space: nowrap;
@@ -122,7 +122,7 @@ mat-toolbar.wf1-application-toolbar {
             outline: none;
         }
     }
-
+    /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
     mat-button-toggle.mat-button-toggle,
     mat-button-toggle.mat-button-toggle-checked {
         max-height: $wf1-toolbar-height;
@@ -465,7 +465,7 @@ mat-toolbar.wf1-application-toolbar {
 //  }
 //}
 
-wf1-list-container mat-list.mat-list {
+wf1-list-container mat-list.mat-mdc-list {
     padding-top: 0;
     height: 100%;
     cdk-virtual-scroll-viewport {
@@ -480,7 +480,10 @@ wf1-list-container wf1-spinner {
     align-items: center;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item.list-item {
+    /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
     .mat-list-item-content {
         align-items: center;
         padding: 0 !important;
