--- a/client/wfnews-war/src/main/angular/src/styles/_material.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_material.scss
@@ -11,9 +11,9 @@
 //  If you specify typography styles for the components you use elsewhere, you should delete this line.
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+//    `@include mat.legacy-typography-hierarchy(mat.define-typography-config());`
+@include mat.all-component-typographies();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -30,13 +30,13 @@ $core-map-app-theme: mat.define-light-theme($core-map-app-primary, $core-map-app
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-legacy-component-themes($core-map-app-theme);
+@include mat.all-component-themes($core-map-app-theme);
 
 // Define a custom typography config that overrides the font-family as well as the
 // `headlines` and `body-1` levels.
-$custom-typography: mat.define-legacy-typography-config(
+$custom-typography: mat.define-typography-config(
   $font-family: '-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"',
-  $title: mat.define-typography-level(32px, 32px, 700),
-  $headline: mat.define-typography-level(32px, 48px, 700),
-  $body-1: mat.define-typography-level(16px, 24px, 500)
+  $headline-6: mat.define-typography-level(32px, 32px, 700),
+  $headline-5: mat.define-typography-level(32px, 48px, 700),
+  $body-2: mat.define-typography-level(16px, 24px, 500)
 );
