--- a/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
@@ -17,7 +17,7 @@
       top: .25rem;
       padding-bottom: 0.5rem;
 
-      .mat-button {
+      .mat-mdc-button {
         min-width: 2rem;
         padding: 0;
       }
@@ -57,7 +57,7 @@
     box-sizing: border-box;
     height: $wf1-toolbar-height;
 
-    .mat-tab-group .mat-tab-header {
+    .mat-mdc-tab-group .mat-mdc-tab-header {
       width: 100%;
     }
   }
@@ -107,9 +107,11 @@
     box-sizing: border-box;
 
     .selected-location {
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
       div.mat-form-field-wrapper {
         padding-bottom: 0;
-
+        /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
         div.mat-form-field-underline {
           bottom: .25rem;
         }
