--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -28,23 +28,27 @@
 .columns-menu{
   display: flex;
   flex: 0 0 auto;
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   div.mat-form-field-wrapper {
     padding-bottom: 0;
-
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     div.mat-form-field-underline {
       display: none;
     }
-
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     div.mat-form-field-infix {
       width: 50px;
       border-top: 0;
       padding: 0;
-
+      /*TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
       mat-select,
       input{
         width: 100%;
       }
-
+      /*TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
       .mat-select-arrow-wrapper{
         visibility: hidden;
       }
@@ -57,10 +61,10 @@
   }
 }
 
-.display-columns-selector.mat-select-panel{
+.display-columns-selector.mat-mdc-select-panel{
   max-height: unset;
 
-  .mat-option{
+  .mat-mdc-option{
     height: 22px;
     font-size: small;
     padding: 10px;
@@ -80,7 +84,7 @@
 #core-interface-container {
   font-family: $font-family-main;
 
-  .mat-paginator-container {
+  .mat-mdc-paginator-container {
     justify-content: center;
     font-size: $font-size;
   }
@@ -114,11 +118,11 @@
   background-color: rgba(244, 230, 195, 1);
   color: $colour-black;
   position: inherit;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     color: #f1780e;
   }
 }
@@ -127,10 +131,11 @@
   background-color: #2e703e;
   color: $colour-white;
   position: inherit;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
+  /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   .mat-button-wrapper{
     color:$colour-white;
   }
@@ -141,14 +146,15 @@
   color: $colour-white;
   position: inherit;
   padding: 18px 16px!important;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
+  /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   .mat-button-wrapper{
     color:$colour-white;
   }
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     border: 1px solid white;
     border-radius: 5px;
   }
@@ -177,14 +183,15 @@
   color: $colour-white;
   position: inherit;
   padding: 18px 16px!important;
-  .mat-simple-snackbar{
+  .mat-mdc-simple-snack-bar{
     font-family: $font-family-main;
     font-size: 13px;
   }
+  /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   .mat-button-wrapper{
     color:$colour-white;
   }
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     border: 1px solid white;
     border-radius: 5px;
   }
@@ -219,7 +226,7 @@
   //  font-family: $font-family-main;
   //  font-size: 13px;
   //}
-  .mat-simple-snackbar-action{
+  .mat-mdc-snack-bar-action{
     color: #acdbac;
   }
 }
@@ -242,18 +249,19 @@
 //}
 
 @media print {
-
+  /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   mat-table,
   tr,
   mat-sidenav-content{
     width: 750px !important;
   }
+  /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   mat-table{
     display: block;
   }
 
-  .mat-table .mat-cell,
-  .mat-table .mat-header-cell{
+  .mat-mdc-table .mat-mdc-cell,
+  .mat-table .mat-mdc-header-cell{
     padding: 0 !important;
   }
 
@@ -269,7 +277,7 @@
     display: none !important;
   }
 
-  #core-interface-container .mat-header-cell,
+  #core-interface-container .mat-mdc-header-cell,
   .review-item .mat-expansion-panel-content .fixed-table-layout td,
   mat-expansion-panel .review-item-header .review-item-status,
   mat-expansion-panel .review-item-header mat-panel-description.mat-expansion-panel-header-description{
@@ -414,8 +422,8 @@
       .summary-card{
         margin: var(--wf1-gutter-space) 0 0 0;
       }
-
-      mat-card.mat-card.wf1-vendor-portal-header-bar {
+      /*TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
+      mat-card.mat-mdc-card.wf1-vendor-portal-header-bar {
         padding: 0;
       }
 
@@ -428,7 +436,7 @@
       }
     }
 
-    .mat-tab-body{
+    .mat-mdc-tab-body{
       .table-wrapper{
         margin: var(--wf1-gutter-space);
         width: calc(100% - 2*var(--wf1-gutter-space));
@@ -526,7 +534,7 @@
   font-size: 14px;
 }
 
-.mat-dialog-container {
+.mat-mdc-dialog-container {
   padding: 0px 0px 24px 0px !important;
   overflow: hidden !important;
 }
