--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.html
@@ -3,7 +3,7 @@
       <div class="header-row">
         <h1>Images and Video Gallery</h1>
       </div>
-      <mat-tab-group>
+      <mat-tab-group mat-stretch-tabs="false">
         <mat-tab id="allMedia" label="All Media">
           <incident-gallery-all-media-mobile [incident]="incident" [displayMediaStub]="displayMediaStub" [allImagesAndVideosStub]="allImagesAndVideosStub" [displayLoadMore]="displayLoadMore"></incident-gallery-all-media-mobile>
         </mat-tab>
