Fix buttons to match TAC

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.html
@@ -4,7 +4,7 @@
     Are you sure you want to publish?
   </div>
   <div class="dialog-actions" mat-dialog-actions>
-  	<button mat-raised-button color="primary" [mat-dialog-close]="returnResult()">Yes</button>
-	  <button mat-raised-button [mat-dialog-close]="false">Cancel</button>
+  	<button mat-raised-button color="primary" [mat-dialog-close]="returnResult()">Publish</button>
+	  <button mat-raised-button [mat-dialog-close]="false">Keep Editing</button>
   </div>
 </div>
