more styling update

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -92,6 +92,10 @@
       transform: translate(-50%, -50%);
       background-color: #EEE;
       height: 36px;
+      
+      mat-icon{
+        // padding-left: 100px;
+      }
     }
   }
 
