--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -302,8 +302,7 @@ mat-card h3 {
 	box-shadow: none !important;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
-::ng-deep .mat-tab-body-wrapper{
+::ng-deep .mat-mdc-tab-body-wrapper{
 	background-color: white !important;
 	padding-left: 1rem;
 	padding-right: 1rem;
