--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.html
@@ -1,6 +1,6 @@
 <div>
-  {{ title }}
-  {{ message }}
+  <div class="rof-text-primary-header">{{ title }}</div>
+  <div class="rof-text-secondary-header">{{ message }}</div>
 
   <textarea matInput rows="3" style="height:auto;"
     [(ngModel)]="reportOfFire[updateAttribute]"
