--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/permissions-page/rof-permissions-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/permissions-page/rof-permissions-page.component.scss
@@ -1,3 +1,5 @@
-:host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+@import '../report-of-fire.component.scss';
+
+::ng-deep.mat-checkbox-layout {
+  white-space: normal !important;
 }
