--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.html
@@ -1,17 +1,18 @@
 <div>
-  {{ title }}
-  {{ message }}
+  <div class="rof-text-primary-header">{{ title }}</div>
+  <div class="rof-text-secondary-header">{{ message }}</div>
 
   <!-- <mat-button-toggle-group> doesn't allow ngFor for whatever reason -->
-  <div *ngFor="let button of buttons">
-    <mat-button-toggle *ngIf="allowMultiSelect" (change)="onValChange(button.value, $event)" [value]="button.value"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</mat-button-toggle>
-    <button type="button" [id]="'btn-' + button.value" mat-flat-button *ngIf="!allowMultiSelect" (click)="onValChange(button.value, $event)"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</button>
+  <div class="rof-toggle-group rof-complex-group">
+    <div *ngFor="let button of buttons">
+      <mat-button-toggle class="flex-button" *ngIf="allowMultiSelect" (change)="onValChange(button.value, $event)" [value]="button.value"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</mat-button-toggle>
+      <button class="flex-button" type="button" [id]="'btn-' + button.value" mat-flat-button *ngIf="!allowMultiSelect" (click)="onValChange(button.value, $event)"><mat-icon *ngIf="button.icon">{{ button.icon }}</mat-icon>{{ button.label }}</button>
+    </div>
+    <mat-button-toggle style="width: 100%" *ngIf="allowIDontKnowButton" value="skip" (click)="onValChange(null)"><mat-icon>question_mark</mat-icon>I'm not sure</mat-button-toggle>
   </div>
 
-  <mat-button-toggle *ngIf="allowIDontKnowButton" value="skip" (click)="onValChange(null)"><mat-icon>question</mat-icon>I don't Know</mat-button-toggle>
-
-  <div>
-    <button mat-flat-button (click)="previous()">Previous</button>
-	  <button [disabled]="disableNext" mat-flat-button color="primary" (click)="next()">Next</button>
+  <div class="rof-button-container">
+    <button class="rof-button" mat-flat-button (click)="previous()">Previous</button>
+	  <button class="rof-button" [disabled]="disableNext" mat-flat-button color="primary" (click)="next()">Next<mat-icon>arrow_forward</mat-icon></button>
   </div>
 </div>
