--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
@@ -1,6 +1,6 @@
 <div>
-  {{ title }}
-  {{ message }}
+  <div class="rof-text-primary-header">{{ title }}</div>
+  <div class="rof-text-secondary-header">{{ message }}</div>
 
   <input matInput type="text" [(ngModel)]="reportOfFire.fullName">
   <input matInput type="text" [(ngModel)]="reportOfFire.phoneNumber">
